--- a/original/46.adoc
+++ b/original/46.adoc
@@ -1,2 +1,17 @@
 
 . local fh -- based on the functions you use in your program, create a docker image with all of them for local use to acc speed
+
+check file 54
+
+
+== fh web UI
+
+. interesting UI https://treeline.io/
+. cool flowcharts for system design and conditions/loop https://jsplumbtoolkit.com/ 
+
+
+== fh blog writing 
+
+. perfect explanation of the problem and solution http://pchiusano.github.io/2013-05-22/future-of-software.html  - Since the solution he implemented is much different but we both agree on the problem. outline your solution 
+.. followup http://pchiusano.github.io/2013-09-10/type-systems-and-ux-example.html http://unisonweb.org/2015-05-07/about.html
+. google acquisition writing 
