--- a/original/54.adoc
+++ b/original/54.adoc
@@ -59,6 +59,8 @@ Place to track bookmarks and related ideas until I find something better
 . Kubernetes https://en.wikipedia.org/wiki/Kubernetes#History https://kubernetes.io/ https://platform9.com/blog/compare-kubernetes-vs-ecs/
 . http://blog.kubernetes.io/2017/01/fission-serverless-functions-as-service-for-kubernetes.html
 . https://docs.docker.com/engine/swarm/
+. http://queues.io/
+. visualize container information - reverse engineer code for logging and billing https://bcicen.github.io/ctop/
 
 
 == api definition and documentation
@@ -83,3 +85,84 @@ Place to track bookmarks and related ideas until I find something better
 . UI for programming http://worrydream.com/LearnableProgramming/
 . eve programming http://witheve.com/
 . http://blog.cloud-elements.com/convergence-api-management-ipaas-ready
+. good eagle view but lots of noise http://apievangelist.com/archive/
+
+
+== fh machine learning 
+
+. ability to type plain sentences for functions and find them based on descriptions and history of data/operations performed by other users https://wit.ai/
+. books on ai https://news.ycombinator.com/item?id=13900153
+. mainstream deep learning http://www.fast.ai/about/
+
+
+== fh blog writing 
+
+. perfect explanation of the problem and solution http://pchiusano.github.io/2013-05-22/future-of-software.html  - Since the solution he implemented is much different but we both agree on the problem. outline your solution 
+.. followup http://pchiusano.github.io/2013-09-10/type-systems-and-ux-example.html http://unisonweb.org/2015-05-07/about.html
+. google acquisition writing 
+
+== big data and analytics
+
+insert anything and transform. ETL stuff 
+
+. http://www.pentaho.com/
+
+== strings manipulation transformation programs
+
+. http://alternativeto.net/software/nimbletext/
+. data manipulation -- similar to ETL https://www.import.io/
+
+== fh IDE 
+
+autocompletion using fh registry and smart problem solver using matchers and machine learning 
+
+. modal editing http://kakoune.org/why-kakoune/why-kakoune.html
+
+== business and growth
+
+. marketing stuff 
+.. https://library.hubspot.com/
+. business metrics and models/pipelines/workflows https://www.semrush.com/blog/7-modern-marketing-frameworks-every-startup-know/
+
+
+== terminal stuff and display fh ruby wrapper
+
+. http://piotrmurach.github.io/tty/
+
+
+== recruiting and employees / collaboration / expertise 
+
+. https://hackhands.com/how-it-works/
+. IDEA: contact guys with work on OSS frameworks like flunker
+
+
+
+== fh cloud
+
+. authentication and google auth https://auth0.com/
+
+== fh web UI
+
+. interesting UI https://treeline.io/
+. cool flowcharts for system design and conditions/loop https://jsplumbtoolkit.com/ 
+
+
+== fh UX
+
+. writing and copyright https://material.io/guidelines/style/writing.html
+. interesting idea to explain stuff and document http://explainshell.com/explain?cmd=cut%20-d%20%27%20%27%20-f%201%20/var/log/apache2/access_logs%20%7C%20uniq%20-c%20%7C%20sort%20-n
+. mobile response visual http://www.responsinator.com/?url=hanselman.com
+
+== fh logging and analytics
+
+. reasonable pricing - https://keen.io/pricing/
+. good integrations https://segment.com/
+
+== fh json manipulation in JS
+
+. https://stedolan.github.io/jq/tutorial/
+. https://www.getpostman.com/
+
+== windows platform 
+
+. https://chocolatey.org/
