--- a/original/54.adoc
+++ b/original/54.adoc
@@ -85,7 +85,7 @@ Place to track bookmarks and related ideas until I find something better
 . UI for programming http://worrydream.com/LearnableProgramming/
 . eve programming http://witheve.com/
 . http://blog.cloud-elements.com/convergence-api-management-ipaas-ready
-. good eagle view but lots of noise http://apievangelist.com/archive/
+. good eagle view on API industry but lots of noise http://apievangelist.com/archive/
 
 
 == fh machine learning 
