--- a/blog/bookmarks-and-ideas-dump-54.adoc
+++ b/blog/bookmarks-and-ideas-dump-54.adoc
@@ -64,6 +64,13 @@ Place to track bookmarks and related ideas until I find something better
 . aws lambda https://aws.amazon.com/lambda/
 . aws ec2 container service https://aws.amazon.com/ecs/
 
+
+== cloud computing hosting
+
+. google cloud computing (also supports containers and other integrated services. free trial. good discounts)
+. aws containers
+. joyent (billed by minute instead of hour)
+
 == faas frameworks
 
 . https://github.com/serverless/serverless most popular  on github when it comes to faas
@@ -78,6 +85,7 @@ Place to track bookmarks and related ideas until I find something better
 
 == container orchestration
 
+. https://www.nomadproject.io/ popular from this post https://www.hashicorp.com/c1m/
 . Kubernetes https://en.wikipedia.org/wiki/Kubernetes#History https://kubernetes.io/ https://platform9.com/blog/compare-kubernetes-vs-ecs/
 . http://blog.kubernetes.io/2017/01/fission-serverless-functions-as-service-for-kubernetes.html
 . https://docs.docker.com/engine/swarm/
@@ -167,6 +175,7 @@ autocompletion using fh registry and smart problem solver using matchers and mac
 
 . interesting UI https://treeline.io/
 . cool flowcharts for system design and conditions/loop https://jsplumbtoolkit.com/ 
+. rich input https://news.ycombinator.com/item?id=13940594
 
 
 == fh UX
