--- a/blog/index.adoc
+++ b/blog/index.adoc
@@ -79,6 +79,17 @@ link:clarifying-vision-48[clarifying vision]
 ++++
 </li>
 
+<li>mvp brainstorming</li><ul><li>
+++++
+link:vision-51[vision]
+++++
+</li>
+<li>
+++++
+link:metrics-52[metrics]
+++++
+</li>
+</ul>
 <li>strings prototype</li><ul><li>
 ++++
 link:end-goal-49[end goal]
@@ -94,15 +105,9 @@ link:list-of-string-functions-50[list of string functions]
 link:end-result-prototype-53[end result prototype]
 ++++
 </li>
-</ul>
-<li>mvp brainstorming</li><ul><li>
-++++
-link:vision-51[vision]
-++++
-</li>
 <li>
 ++++
-link:metrics-52[metrics]
+link:experimenting-with-end-to-end-55[experimenting with end to end ]
 ++++
 </li>
 </ul></ul>
