--- a/blog/index.adoc
+++ b/blog/index.adoc
@@ -97,12 +97,12 @@ link:end-goal-49[end goal]
 </li>
 <li>
 ++++
-link:list-of-string-functions-50[list of string functions]
+link:list-of-string-functions-from-various-apis-50[list of string functions from various apis]
 ++++
 </li>
 <li>
 ++++
-link:end-result-prototype-53[end result prototype]
+link:end-result-usage-example-53[end result usage example]
 ++++
 </li>
 <li>
@@ -110,7 +110,24 @@ link:end-result-prototype-53[end result prototype]
 link:experimenting-with-end-to-end-55[experimenting with end to end ]
 ++++
 </li>
-</ul></ul>
+<li>
+++++
+link:not-too-sure-about-strings-prototype-idea-57[not too sure about strings prototype idea]
+++++
+</li>
+<li>
+++++
+link:solving-the-high-context-switching-and-development-workflow-58[solving the high context switching and development workflow]
+++++
+</li>
+
+<li>experiments</li><ul>
+<li>video to mp3 experiment</li><ul><li>
+++++
+link:thoughts-56[thoughts]
+++++
+</li>
+</ul></ul></ul></ul>
 <li>thinking about software</li><ul><li>
 ++++
 link:3-related-ideas-26[3 related ideas]
