--- a/original/54.adoc
+++ b/original/54.adoc
@@ -175,3 +175,14 @@ autocompletion using fh registry and smart problem solver using matchers and mac
 == windows platform 
 
 . https://chocolatey.org/
+
+== modeling 
+
+. good overview of bpmn business process management http://www.bpmnquickguide.com/view-bpmn-quick-guide/
+ 
+
+== docker 
+
+. squash image layers instead of optimizing Dockerfile https://github.com/jwilder/docker-squash
+. experiment with docker and multiple hosts http://labs.play-with-docker.com/
+. 
