--- a/blog/the-plan-66.adoc
+++ b/blog/the-plan-66.adoc
@@ -42,6 +42,7 @@ The issue with APIs is they are:
 - scattered
 - inaccessible 
 - "machine unreadable" 
+- hosting/scalability & pricing
 
 ### Scattered
 
@@ -58,37 +59,43 @@ This is solved by:
 
 ### Inaccessible
 
-
-// TODO(hbt) NEXT reuse previous 
-tons of OSS completely inaccessible to regular people and even developers.
-current rest apis are inaccessible -- unreable prices, rest/json is like wtf for normal people, weird json
+view 62 for listing of problems
 
 
-advantages of dockeerfying and restying
+This is solved by:
 
+- dockerfying - fixes the dependencies/platform/packaging problems
+- restifying - make the API easily accessible
 - Dockerfying and Restifying binaries. Example: https://rg3.github.io/youtube-dl/ as a service or ffmpeg as a service
-
-
-It is barely usable as a human and completely useless to machines
 
 
 ### Machine unreadable
 
-too much boilerplate and buggy spagetting code
-json-schema / protocol buffers
+Even though we have tons of REST APIs on mashape.com and are accessible in a somewhat programmable way, it remains complete giberrish to a machine (and even a human with minimal domain knowledge) without a schema.
+
+A schema to represent what the data means allows you not only to validate input/output but manipulate the data and convert it. 
+This is the key missing element despite the technology already existing in the form of json-schema, protocol buffers, rpc etc.
+
+Without a schema, you have to write boilerplate code to connect APIs together. Boilerplate means human input. 
+Eliminating the boilerplate code means a machine can use multiple REST APIs through schema and mappers.
 
 
 ## Step 2 - Connect actions. Compute knowledge
 
-Wolframalpha 
-create complexity
-what it means to compute
-exploration of actions through schema
+With centralized list of APIs that are schematized, you can connect REST calls to perform complex actions. 
+You could say "get all gmail attachments and upload them to S3". The NLP could get this right with a proper schema knowing that gmail is a service, attachments are objects, S3 is another service, upload is an action etc.
+
+This is not possible today without writing boilerplate code to connect all those REST calls.
+
+
+I believe in Wolfram vision of computational knowledge. We have to break down API to a single unit of computation and build the links in order to perform complex tasks.
 
 
 ## Step 3 - Make it easier to build APIs
 
-why starting here was the wrong approach
-existing attempts
-people will spaghetti
+This is the step I started at and it was "sort of a mistake". 
+There is no point in making it easier to build APIs; people already build them. The problem is lack of discovery/exploration/accessibility etc. 
 
+Developers who want to build an API will figure out a way to build it. Even if it is a single file exposing a web server and responding to get/post requests; it still counts as an API. 
+
+The idea of a platform is a great one but there is tons of competition and having a platform will not fix the fact that we have APIs that are inacessible.
