--- a/original/67.adoc
+++ b/original/67.adoc
@@ -1,4 +1,7 @@
 
+
+## Idea
+
 Since the idea of a schema to connect REST apis is what I believe is holding us back. I need to investigate + prototype a system where
 
 ### existing REST APIs can be schematized *without* any work/permission from API developer.
@@ -16,3 +19,9 @@ If the API developer does not have to provide a schema, it means less people to 
 - Write a converter/mapper from one schema to another
 - Feed output from API 1 into API 2 with minimal boilerplate code
 - Add more schemas and mappers to convert recursively
+
+
+## Research
+
+- swagger 
+- list of apis using swagger https://apis.guru/browse-apis/
