--- a/blog/index.adoc
+++ b/blog/index.adoc
@@ -22,6 +22,16 @@
 link:putting-a-video-on-my-phone-71[putting a video on my phone]
 ++++
 </li>
+<li>
+++++
+link:basic-scripting-and-automation-72[basic scripting and automation]
+++++
+</li>
+<li>
+++++
+link:dockerfication-and-scaling-73[dockerfication and scaling]
+++++
+</li>
 </ul>
 <li>build smart assistants (wip)</li><ul><li>
 ++++
